service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datadash-service
  namespace: datadash
spec:
  selector:
    app: datadash
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
